# noogle

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  noodle.py  pyproject.toml  tox.ini
examples/: greet.py  pass_generator.py  say_hi.py  secrets_cli.py  simplest.py
mary/: __init__.py  _formatter.py  _io.py  _messages.py  _parser.py  base.py  command.py  core.py  master.py  parser.py
noodle/: __init__.py  _formatter.py  _globals.py  _help_formatter.py  _hue.py  _messages.py  _parser.py  core.py  io.py
tests/: test_formatter.py  test_greet_cli.py  test_mary.py  test_messages.py  test_noodle.py  test_parser.py
