[tool.poetry]
name = "noodle"
version = "0.0.1"
description = "Create beautiful and lightweight Command Lines Tools."
authors = ["wilfredinni <carlos.w.montecinos@gmail.com>"]
repository = "https://github.com/wilfredinni/noodle"
readme = "README.md"
license = "MIT"
keywords = ["cli", "commands"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.7"
tox = "^3.9"
coverage = "^4.5"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
